--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  google_fonts: ^2.1.0
   cupertino_icons: ^1.0.2
+  flutter_localized_locales: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -19,4 +23,5 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
