--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  provider: ^6.0.1
   google_fonts: ^2.1.0
   cupertino_icons: ^1.0.2
   flutter_localized_locales: ^2.0.3
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
