--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/app_icon.png'
 
 flutter:
   generate: true
   uses-material-design: true
+  assets:
+    - assets/
